@@ -1,3 +1,7 @@
+2003-01-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* stack.cpp: Speed up field expansions.
+
 2003-01-28  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* camfr_wrap.cpp: Fix BlochStack.length().
